# UnicornConsole

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  Cross.toml  LICENSE  LICENSE.md  Makefile  README.md  appveyor.yml  birds.p8  build.rs
ci/: install.sh  (+1 more)
src/plugins/javascript/: Cargo.toml  build.rs
src/plugins/javascript/duktape-source/: duktape_binding.c
src/plugins/javascript/examples/: sample.rs
src/plugins/javascript/src/: encoder.rs  lib.rs  types.rs
src/plugins/javascript/src/ffi/: mod.rs
unicorn/: Cargo.toml  build.rs  rustfmt.toml
unicorn-android/sdl/: CMakeLists.txt  build.gradle  proguard-rules.pro
unicorn-android/sdl/src/SDL/: android.c
unicorn-android/sdl/src/main/: AndroidManifest.xml
unicorn-console/: Cargo.toml  keyboardInput.json
unicorn-console/src/: frametimes.rs  main.rs  network.rs
unicorn-console/src/contexts/: input_context.rs  mod.rs
unicorn-console/src/gui/: controller.rs  framework.rs  mod.rs  play_mode_gui.rs
unicorn-console/src/input/: gamepad_bindings.rs  key_bindings.rs  key_types.rs  local_input_manager.rs  mod.rs  player_input_entry.rs
unicorn-devkit/: Cargo.toml
unicorn-devkit/src/: frontend.rs  input.rs  main.rs  renderer.rs
unicorn-editor/: Cargo.toml  demo.corn
unicorn-editor/src/: main.rs
unicorn-editor/src/editor/: editor_palette.rs  editor_sounds_data.rs  mod.rs
unicorn-editor/src/ui/: editor.rs  mod.rs
unicorn-editor/src/ui/audio/: audio_editor.rs  audio_editor_help.rs  audio_list.rs  mod.rs  oscilloscope.rs
unicorn-editor/src/ui/audio/instrument_editor/: envelope_widget.rs  fm_editor.rs  instrument_list.rs  instrument_top_panel.rs  interpolator_widget.rs  mod.rs  piano_roll.rs  sampler_editor.rs  wavetable_editor.rs
unicorn-editor/src/ui/audio/sequences/: mod.rs  tracker_edit.rs  tracker_text.rs
unicorn-editor/src/ui/graphics/: mod.rs
unicorn-editor/src/ui/graphics/code_editor_tab/: mod.rs  syntax_highlighting.rs
unicorn-editor/src/ui/graphics/map_editor_tab/: map_view.rs  mod.rs  sprite_sheet_list.rs
unicorn-editor/src/ui/graphics/sprite_editor_tab/: brush_tool.rs  mod.rs  palette_view.rs  sprite_sheet_list.rs  sprite_view.rs
unicorn-emscripten/: Cargo.toml
unicorn-emscripten/src/: frontend.rs  main.rs  renderer.rs
unicorn-games/dino/: Cargo.toml
unicorn-games/dino/src/: main.rs
unicorn-libretro/: Cargo.toml
unicorn-libretro/src/: lib.rs
unicorn-piston/: Cargo.toml
unicorn-piston/src/: main.rs
unicorn-sdl/: Cargo.toml
unicorn-sdl/src/: emscripten.rs  frontend.rs  input.rs  lib.rs  renderer.rs
unicorn/examples/: api.lua  api.p8  api_demos.uni  chiptune-sample.rs  christmas_tree.uni  fireworks.p8  fireworks.uni  fireworks2.uni  flock.p8  ghostmark.rs  ghostmark_dyon.p8  helloworld.rs  jam.p8  rayzzz-0.2.p8
unicorn/examples/assets/: katana.ki
unicorn/examples/audio/: audio.py  audio.uc
unicorn/examples/collision/: collision.px8
unicorn/examples/edu/: px8_sort.uni
unicorn/examples/font/: font.uc
unicorn/examples/helloworld/: helloworld.dpx8  helloworld.p8  helloworld.py
unicorn/examples/helloworld/lua/: helloworld.p8
unicorn/examples/lighting/: lighting.lua
unicorn/examples/mode/: mode.py
unicorn/examples/mouse/: mouse.py
unicorn/examples/plasma/: plasma.py
unicorn/examples/pong/: pong.py
unicorn/examples/pong/multi/: pong.px8  server.py
unicorn/examples/pymunk/: bouncing_balls.py  contact_with_friction.py
unicorn/examples/spaceshooter/tutorials/: tut_1.p8  tut_2.p8  tut_5.p8
unicorn/games/dopewar/: dopewar.uni
unicorn/games/liquidwar/: liquidwar.uni
unicorn/games/pixelbox/: pixelbox.uc
unicorn/src/: lib.rs
unicorn/src/audio/: consts.rs  envelope_definition.rs  mod.rs  sound_rom.rs
unicorn/src/audio/instruments/: index_interpolator.rs  instrument_data_definition.rs  mod.rs
unicorn/src/audio/instruments/fm/: algorithm.rs  detune.rs  feedback.rs  fm_waveform.rs  frequency_multiplier.rs  mod.rs  operator_definition.rs  patch_definition.rs
unicorn/src/audio/instruments/sampler/: loop_mode.rs  mod.rs  (+1 more)
unicorn/src/audio/notes/: mod.rs  note.rs  note_name.rs  octave.rs
unicorn/src/audio/tracker/: chain.rs  effect.rs  mod.rs  phrase.rs  song.rs
unicorn/src/cartridge/: code.rs  gff.rs  gfx.rs  map.rs  mod.rs  music.rs  palette.rs  sfx.rs  utils.rs
unicorn/src/chiptune/: Cargo.toml  build.rs
unicorn/src/chiptune/src/: lib.rs
unicorn/src/config/: keys.rs  mod.rs  scancode.rs
unicorn/src/contexts/: input_context.rs  mod.rs
unicorn/src/core/: edit.rs  info.rs  mod.rs  noise.rs  resolution.rs  utils.rs
unicorn/src/editor/: gfx_editor.rs  mod.rs  music_editor.rs
unicorn/src/editor/text_editor/: buffer.rs  command.rs  keyboard.rs  keymap.rs  mod.rs  overlay.rs  textobject.rs  view.rs
unicorn/src/gfx/: camera.rs  clip.rs  framerate.rs  mod.rs  palette.rs  sprite.rs
unicorn/src/gfx/fonts/: appleii.rs  bbc.rs  cbmii.rs  mod.rs  pico8.rs  trollmini.rs
unicorn/src/input/: input_code.rs  input_state.rs  mod.rs  mouse_state.rs  player_input_entry.rs
unicorn/src/platform/: mod.rs
unicorn/src/platform/normal/: mod.rs
unicorn/src/plugins/: javascript_plugin.rs  lua_plugin.rs  mod.rs  python_plugin.rs  rhai_plugin.rs  rpython_plugin.rs  wasm_plugin.rs
unicorn/src/plugins/duktape/: Cargo.toml
unicorn/src/plugins/lua/: Cargo.toml  LICENSE.md  README.md  api.lua  pico8.lua
unicorn/src/plugins/python/: api.py  collision.py
unicorn/src/sound/: mod.rs  sound_engine.rs  sound_output_channels.rs  sound_rom_instance.rs
unicorn/src/sound/envelope/: envelope_instance.rs  envelope_phase.rs  exponential_ramp.rs  linear_ramp.rs  mod.rs
unicorn/src/sound/instruments/: instrument_instance.rs  mod.rs
unicorn/src/sound/playback/: chain_playback.rs  mod.rs  phrase_playback.rs  sfx_playback.rs  song_playback.rs  tracker_flow.rs  tracker_oscillator.rs
unicorn/src/unicorn/: edit.rs  info.rs  math.rs  mod.rs  noise.rs  packet.rs  utils.rs
unicorn/src/unicorn/editor/: gfx_editor.rs  mod.rs  music_editor.rs
unicorn/sys/: unicorn.uni
unicorn/sys/assets/: null.ki
unicorn/sys/config/: api.py  gamecontrollerdb.txt
(+433 files in other folders)
