[package]
name = "px8"
version = "0.0.3"
authors = ["hallucino <d@t0t0.fr>"]
description = "Open source fantasy console in Rust"
documentation = "https://github.com/Gigoteur/PX8/blob/master/README.md"
homepage = "https://github.com/Gigoteur/PX8"
repository = "https://github.com/Gigoteur/PX8"
readme = "README.md"
keywords = ["rust", "console", "python", "lua", "8bits"]
license = "MIT"
build = "build.rs"

exclude = [ ".idea/*", ".travis.yml" ]

#[lib]
#name       = "px8"
#path       = "src/lib.rs"

[features]
default = []
sdl_renderer = []

[dependencies]
time = "0.1.35"
regex = "0.2.1"
png = "0.5.2"
byteorder = "1.0.0"
rand = "0.3.15"
libc = "0.2.18"
chan ="0.1.18"
log = "0.3.6"
fern = "0.3.5"
rusttype = "0.2.1"
getopts = "0.2.14"
nalgebra = "0.11.1"
image = "0.11.0"
gif = "0.9.0"
rustc-serialize = "0.3.22"
chrono = "0.2.25"
futures = "0.1"
tokio-core = "0.1"
tokio-service = "0.1"
tokio-proto = "0.1"
lazy_static = "0.1.*"

cpython = {version = "0.1.0", optional = true}
lua = {version = "0.0.10", optional = true }

[dependencies.sdl2]
version = "0.27.2"
default-features = false
features = ["mixer"]

[dependencies.glium]
version = "0.15.0"
default-features = false
