[package]
name = "px8"
version = "0.0.4"
authors = ["hallucino <d@t0t0.fr>"]
description = "Open source fantasy console in Rust"
documentation = "https://github.com/Gigoteur/PX8/blob/master/README.md"
homepage = "https://github.com/Gigoteur/PX8"
repository = "https://github.com/Gigoteur/PX8"
readme = "README.md"
keywords = ["rust", "console", "python", "lua", "8bits"]
license = "MIT"
build = "build.rs"

exclude = [ ".idea/*", ".travis.yml" ]

[lib]
name       = "px8"
path       = "src/lib.rs"

[features]
default = []
blit_perf = []

[dependencies]
time = "0.1.35"
regex = "0.2.1"
png = "0.9.0"
byteorder = "1.0.0"
rand = "0.3.15"
libc = "0.2.18"
log = "0.3.6"
fern = "0.3.5"
rusttype = "0.2.1"
getopts = "0.2.14"
nalgebra = "0.11.1"
image = "0.14.0"
gif = "0.9.0"
chrono = "0.2.25"
lazy_static = "0.1.*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
noise = "0.4.0"
num = "0.1.37"
num-traits = "0.1"
glob = "0.2.11"

cpython = {version = "0.1.0", optional = true}
lua = {optional = true, git="https://github.com/Gigoteur/rust-lua53", version="0.0.11"}

[dependencies.sdl2]
version = "0.27.2"
default-features = false
features=["mixer"]