[package]
name = "unicorn-console"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "console"
path = "src/main.rs"

[dependencies]
unicorn = { path = "../unicorn/" }

# Windowing & Graphics
winit = { version = "0.26.1", features = ["serde"] }
pixels = "0.9.0"
winit_input_helper = "0.12.0"


# Serialization / File Loading etc
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
bytemuck = "1.12.1"

# Scripting
wasmtime = { version = "0.40.1", features = ["cranelift"] }

# Random
fastrand = "1.8.0"

# Audio
cpal = "0.13.5"

# Networking
ggrs = "0.9.2"

# Input
gilrs = "0.9.0"