[package]
name = "uc-devkit"
version = "0.0.1"
authors = ["hallucino <d@t0t0.fr>"]
description = "Unicorn Console web devkit"
documentation = ""
homepage = ""
repository = ""
readme = "README.md"
keywords = []
license = "MIT"

[dependencies]
getopts = "0.2.14"
log = "0.3.6"
fern = "0.3.5"
time = "0.1.35"

[dependencies.stdweb]
version = "0.3"

[dependencies.unicorn_sdl]
path = "../unicorn-sdl"

[dependencies.unicorn]
path="../unicorn"
features = ["cpython", "unicorn_plugin_lua", "duktape", "libksnd", "syntect", "noise", "image"]


[profile.dev]
opt-level = 2
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1