[package]
name = "unicorn-libretro"
version = "0.0.1"
authors = ["hallucino <d@t0t0.fr>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
time = "0.1.35"
log = "0.3.6"
fern = "0.3.5"

[dependencies.libretro-backend]
git="https://github.com/Gigoteur/libretro-backend.git"
version = "0.2"

[dependencies.unicorn]
path="../unicorn"
features = ["cpython", "unicorn_plugin_lua"]

[profile.dev]
opt-level = 2
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

