[package]
name = "unicorn-libretro"
version = "0.0.2"
authors = ["hallucino <d@t0t0.fr>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
time = "0.3.9"
log = "0.4"
fern = "0.6.1"
libretro-rs = "0.1"

[dependencies.unicorn]
path="../unicorn"
features = ["cpython", "rlua", "noise", "editor"]

[profile.dev]
opt-level = 2
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

