[package]
name = "uc-piston"
version = "0.0.1"
authors = ["hallucino <d@t0t0.fr>"]
description = "Unicorn console dev kit (via piston)"
documentation = ""
homepage = ""
repository = ""
readme = "README.md"
keywords = []
license = "MIT"

exclude = [ ".idea/*", ".travis.yml" ]

[dependencies]
time = "0.1.35"
getopts = "0.2.14"
regex = "0.2.1"
log = "0.3.6"
fern = "0.3.5"
chrono = "0.2.25"
piston_window = "^0.73.0"
piston2d-gfx_graphics="0.50.0"
pistoncore-glutin_window = "0.45.0"
piston = "0.36.0"
piston2d-graphics="0.26.0"
gfx = "0.17.1"
gfx_device_gl = "0.15.0"

[dependencies.unicorn]
path="../unicorn"
features = ["cpython", "unicorn_plugin_lua", "duktape", "syntect", "image", "noise"]
