[package]
name = "unicorn"
version = "0.0.2"
authors = ["hallucino <d@t0t0.fr>"]
description = "Unicorn console"
documentation = ""
homepage = ""
repository = ""
readme = "README.md"
keywords = ["unicorn", "python", "lua", "javascript"]
license = "MIT"
build = "build.rs"

exclude = [ ".idea/*", ".travis.yml" ]

[lib]
name       = "unicorn"
path       = "src/lib.rs"
#crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'

[features]
default = []
editor = []

[patch.crates-io]
rand = { git = "https://github.com/hallucino/rand.git", branch = "wasm" }

[dependencies]
regex = "1.5.6"
byteorder = "1"
rand = "0.4"
libc = "0.2"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
rusttype = "0.9.2"
gif = "0.11.3"
lazy_static = "1.4.0"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
num-traits = "0.2.15"
glob = "0.3.0"
clippy = {version = "*", optional = true}
gapbuffer = "0.1.1"
unicode-width = "0.1.9"
ordered-float = "3.0.0"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.4", default-features = false }

[dependencies.cpython]
version = "0.7"
optional = true

[dependencies.unicorn_plugin_lua]
optional = true
version="0.0.11"
path="src/plugins/lua"

[dependencies.duktape]
optional = true
version="0.0.1"
path="src/plugins/duktape"

[dependencies.syntect]
optional = true
version = "5.0.0"

[dependencies.noise]
optional = true
version = "0.4.1"

[dependencies.image]
optional = true
version="0.18.0"
features=["png_codec"]
