[package]
name = "unicorn"
version = "0.1.0"
authors = ["hallucino <d@t0t0.fr>"]
description = "Unicorn Console"
documentation = ""
homepage = ""
repository = ""
readme = "README.md"
keywords = ["unicorn", "python", "lua", "javascript"]
license = "MIT"
build = "build.rs"

exclude = [ ".idea/*", ".travis.yml" ]

[lib]
name       = "unicorn"
path       = "src/lib.rs"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'

[features]
default = []
editor = []

[patch.crates-io]
rand = { git = "https://github.com/hallucino/rand.git", branch = "wasm" }

[dependencies]
regex = "1.5.6"
byteorder = "1"
rand = "0.4"
libc = "0.2"
log = "0.4"
rusttype = "0.9.2"
gif = "0.11.3"
serde = { version = "1.0.144", features = ["derive"] }
num-traits = "0.2.15"
glob = "0.3.0"
clippy = {version = "*", optional = true}
gapbuffer = "0.1.1"
unicode-width = "0.1.9"
ordered-float = "3.0.0"
png = "0.17.5"
anyhow = "1.0"

[dependencies.cpython]
version = "0.7"
optional = true

[dependencies.rlua]
optional = true
version="0.19.2"

[dependencies.duktape]
optional = true
version="0.0.1"
path="src/plugins/duktape"

[dependencies.image]
optional = true
version="0.18.0"
features=["png_codec"]
