[package]
name = "dino"
version = "0.0.1"
authors = ["hallucino <d@t0t0.fr>"]
description = "Dino - Unicorn Console web"
documentation = ""
homepage = ""
repository = ""
readme = "README.md"
keywords = []
license = "MIT"

[dependencies]
serde = "1"
serde_derive = "1"
lazy_static = "0.1.*"

[dependencies.stdweb]
version = "0.3"


[dependencies.unicorn_web]
path = "../../unicorn-web"

[dependencies.unicorn]
path = "../../unicorn"

[profile.dev]
opt-level = 2
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1