[package]

name = "duktape"
version = "0.0.1"
authors = ["Hallucino"]
description = "Bindings to Duktape Javascript"
repository = ""
readme = "README.md"
keywords = [
  "javascript", "duktape", "bindings"
]
license = "MIT"
build = "build.rs"
links = "duktape"

[lib]
name = "duktape"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
gcc = "0.3"

[dependencies]
bitflags = "0.1"
libc = "0.2.13"
cesu8 = "*"
abort_on_panic = "*"
serde = "*"