[package]

name = "unicorn_plugin_lua"
version = "0.0.11"
authors = ["J.C. Moyer"]
description = "Bindings to Lua 5.3 with some modification for PX8"
documentation = "https://docs.rs/lua"
repository = "https://github.com/jcmoyer/rust-lua53"
readme = "README.md"
keywords = [
  "lua", "lua53", "rust-lua53", "bindings"
]
license = "MIT"
build = "build.rs"
links = "lua"

[build-dependencies]
gcc = "0.3"

[dependencies]
bitflags = "0.1"
libc = "0.2.13"

